# insult-bot

./: README.md  insult_bot.py  pyproject.toml  requirements.txt
